# qbm_benchmark_dataset

./: .gitignore  README.md  pyproject.toml
data/histories/: MaxGrad_t0_beta1-0_q4_qbm0_e1000_lr0-01_sn0-0_dn0-0.npy  MaxGrad_t0_beta1-0_q4_qbm0_e1000_lr0-01_sn0-0_dn0-0.txt  MaxGrad_t0_beta1-0_q4_qbm8_e1000_lr0-01_sn0-0_dn0-0_pre-qbm6_pre-e300_pre-lr0-01_full.npy  MaxGrad_t0_beta1-0_q4_qbm8_e1000_lr0-01_sn0-0_dn0-0_pre-qbm6_pre-e300_pre-lr0-01_pre.npy  QRE_t0_beta1-0_q4_qbm0_e1000_lr0-01_sn0-0_dn0-0.npy  QRE_t0_beta1-0_q4_qbm0_e1000_lr0-01_sn0-0_dn0-0.txt  QRE_t0_beta1-0_q4_qbm8_e1000_lr0-01_sn0-0_dn0-0_pre-qbm6_pre-e300_pre-lr0-01_full.npy  QRE_t0_beta1-0_q4_qbm8_e1000_lr0-01_sn0-0_dn0-0_pre-qbm6_pre-e300_pre-lr0-01_pre.npy
data/results/: Params_t0_beta1-0_q4_qbm0_e1000_lr0-01_sn0-0_dn0-0.npy  Params_t0_beta1-0_q4_qbm0_e1000_lr0-01_sn0-0_dn0-0.txt  Params_t0_beta1-0_q4_qbm8_e1000_lr0-01_sn0-0_dn0-0_pre-qbm6_pre-e300_pre-lr0-01_full.npy  Params_t0_beta1-0_q4_qbm8_e1000_lr0-01_sn0-0_dn0-0_pre-qbm6_pre-e300_pre-lr0-01_pre.npy  Time_t0_beta1-0_q4_qbm0_e1000_lr0-01_sn0-0_dn0-0.npy  Time_t0_beta1-0_q4_qbm0_e1000_lr0-01_sn0-0_dn0-0.txt  (+2 more)
notebooks/: 00_hamiltonians.ipynb  01_training.ipynb  02_kappen_quantum.ipynb  03_benchmark.ipynb  04_XXZ.ipynb  04_XXZ_pretraining.ipynb  05_shot_noise.ipynb  06_training_results.ipynb  06_training_results_TFIM.ipynb  07_training_results_1D_Heisenberg.ipynb  08_training_results_2D_Hubbard.ipynb
qbm_quimb/: data.py  hamiltonians.py  training.py
script/: #benchmark.py#  benchmark.py  benchmark_tfim.py  run_benchmark.sh
(+19800 files in other folders)
